--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "chartjs-adapter-date-fns": "^3.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
