--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
+    //"baseUrl": ".",
     "composite": true,
     "skipLibCheck": true,
     "module": "ESNext",
